<resources>
    <string name="app_name">Capstone App</string>

    // Firebase
    <string name="facebook_application_id" translatable="false">74a2254e9989dff2cdc160</string>

    //Side Navigation
    <string name="open">Open</string>
    <string name="close">Close</string>

    <string name="RESULT_OK">24</string>
    <string name="RESULT_FAIL">-1</string>

    // Fragment Titles
    <string name="profile_title">My Profile</string>
    <string name="college_search_title">College Search</string>
    <string name="my_colleges_title">My Colleges</string>
    <string name="logout_title">Logout</string>

    // Profile Attributes
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="degree_seeking">Degree Seeking</string>

    //College Attributes

    // Overview
    <string name="ea_deadline">Early Action Application Deadline</string>
    <string name="rd_deadline">Regular Decision Application Deadline</string>
    <string name="college_type">College Type</string>
    <string name="degree_type">Degree Type</string>
    <string name="special_mission">Special Mission</string>
    <string name="acceptance_rate">Acceptance Rate</string>
    <string name="undergrad_enrollment">Undergrad Enrollment</string>
    <string name="website">Website</string>

    // Academics
    <string name="graduation_rate">Graduation Rate</string>
    <string name="average_gpa">Average GPA</string>
    <string name="average_sat">Average SAT</string>
    <string name="average_act">Average ACT</string>

    // Costs
    <string name="breakdown_title">Breakdown</string>
    <string name="average_cost">Average Cost of Attendance</string>
    <string name="tuition_fees">Tuition and Fees</string>
    <string name="in_tuition">In-State Tuition</string>
    <string name="out_tuition">Out-of-State Tuition</string>
    <string name="room_board">Room and Board</string>
    <string name="books">Books and Supplies</string>
    <string name="other_exp">Other Expenses</string>

    <string name="federal_loans">Receiving Federal Loans</string>
    <string name="pell_students">Pell Students</string>
    <string name="student_debt">Median Student Debt</string>
    <string name="parent_debt">Median Parent PLUS Debt</string>

    //College Detail Tabs
    <string name="overview_tab">Overview</string>
    <string name="academics_tab">Academics</string>
    <string name="costs_tab">Costs</string>

    <string name="add_favorites">ADD TO FAVORITES</string>
    <string name="go_favorites">GO TO FAVORITES</string>

    // State Filter Tabs
    <string name="state_tab">State</string>

    // Type Filter Tabs
    <string name="type_tab">Type</string>
    <string name="public_type">Public</string>
    <string name="private_np_type">Private Nonprofit</string>
    <string name="private_fp_type">Private For-Profit</string>

    // Mission Filter Tabs
    <string name="mission_tab">Mission</string>

    // Shared Preferences Keys (Filtering)
    <string name="filter_key">FILTERS</string>
    <string name="state_key">STATE</string>
    <string name="type_key">TYPE</string>
    <string name="mission_key">MISSION</string>
    <string name="all_filters">All</string>

    // Statuses
    <string name="to_do">To Do</string>
    <string name="in_progress">In Progress</string>
    <string name="complete">Complete</string>

    // Content Descriptions
    <string name="favorite_description">Favorite icon to represent favoring a college</string>
    <string name="filter_description">Filter icon</string>

    // Misc
    <string name="thumbnail_description">College thumbnail</string>
    <string name="filter_title">Filter</string>
    <string name="screen_entered_first_time">ScreenEnteredFirstTime</string>
    <string name="apply">Apply</string>
    <string name="search_hint_text">Search by college name</string>
    <string name="no_colleges_text">No Colleges Found</string>
    <string name="no_fav_colleges_text">You have not added any colleges to your favorites.</string>
    <string name="unfavorite_dialog_message">Are you sure you want to unfavorite this? This will delete the applications steps as well</string>
    <string name="unfavorite_dialog_title">Un-favorite College</string>
    <string name="unfavorite_dialog_cancel">Cancel</string>
    <string name="unfavorite_dialog_ok">Delete</string>
    <string name="close_task_dialog_message">Are you sure you want to close this task? All unsaved changes will be lost.</string>
    <string name="close_task_dialog_title">Close Task</string>
    <string name="close_task_dialog_cancel">Continue Editing</string>
    <string name="close_task_dialog_ok">Close Task</string>
    <string name="loading_progress_title">Getting Colleges Information</string>
    <string name="save_user_progress_title">Saving Your Information</string>

    // Manage Application Tasks
    <string name="manage_tasks">Manage Application Tasks</string>
    <string name="todoTaskHeader">To-Do</string>
    <string name="ipTaskHeader">In-Progress</string>
    <string name="completeTaskHeader">Completed</string>
    <string name="no_items_to_do">You have no items in to do</string>
    <string name="no_items_in_progress">You have no items in progress</string>
    <string name="no_items_complete">You have not completed any items</string>

    // Null Strings
    <string name="data_not_available">Data Not Available</string>

    // Survey Details
    <string name="survey_first_name_header">First Name</string>
    <string name="survey_first_name_hint">What is your first name?</string>
    <string name="survey_last_name_header">Last Name</string>
    <string name="survey_last_name_hint">What is your last name?</string>
    <string name="survey_degree_header">Degree Seeking</string>
    <string name="survey_degree_hint">What degree are you planning to get?</string>
    <string name="survey_email_header">E-Mail</string>
    <string name="survey_email_hint">E-Mail</string>
</resources>
