<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/extra_large_margin"
    android:paddingTop="@dimen/extra_large_margin"
    tools:context=".ui.profile.ProfileFragment">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="@dimen/frag_profile_image"
        android:layout_height="@dimen/frag_profile_image"
        android:src="@drawable/profile_black_48"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/frag_profile_image"
        android:layout_marginStart="@dimen/small_margin"
        android:gravity="center_vertical"
        app:layout_constraintStart_toEndOf="@+id/imageView"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="John Doe" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="579dp"
        android:layout_marginTop="@dimen/medium_margin"
        android:elevation="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="@dimen/medium_margin">

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:textAlignment="viewEnd" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_margin"
                android:textAlignment="viewStart"
                tools:text="John" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="@dimen/medium_margin">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_name"
                android:textAlignment="viewEnd" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/medium_margin"
                android:textAlignment="viewStart"
                tools:text="Doe" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginVertical="@dimen/medium_margin">

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/degree_seeking"
                android:textAlignment="viewEnd" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/medium_margin"
                android:textAlignment="viewStart"
                tools:text="Bachelor's" />
        </TableRow>

    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>